--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "sharp": "^0.34.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.17",
     "three": "^0.175.0",
+    "tsparticles": "^3.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
