--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
@@ -22,13 +24,12 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
-    "react-tsparticles": "^2.12.2",
+    "react-swipeable": "^7.0.2",
     "react-type-animation": "^3.2.0",
     "sharp": "^0.34.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.17",
     "three": "^0.175.0",
-    "tsparticles": "^3.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
